--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ thiserror = "1.0.26"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.64"
 serde_urlencoded = "0.7.0"
+derive_builder = "0.10.2"
