--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.64"
 serde_urlencoded = "0.7.0"
 derive_builder = "0.10.2"
+base64 = "0.13.0"
